crates/jolt_kotlin_fmt/tests/snapshots/corpus__upstream_docs__kotlin_basic_syntax_inspired.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.docs

fun sum(left: Int, right: Int): Int = left + right

fun main() {
  val total = sum(2, 3)
  println("total = $total")
}

diagnostics:
(none)
