crates/jolt_kotlin_fmt/tests/snapshots/corpus__upstream_docs__kotlin_classes_inspired.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.docs

class Customer(val name: String) {
  var visits: Int = 0

  fun greet(): String = "Welcome, $name"
}

diagnostics:
(none)
