crates/jolt_kotlin_fmt/tests/snapshots/corpus__upstream_docs__kotlin_control_flow_inspired.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.docs

fun describe(value: Any): String =
  when (value) {
    is String -> "text with ${value.length} chars"
    is Int -> "number $value"
    else -> "unknown"
  }

diagnostics:
(none)
